Fix spacing between rows in slideshow list. [IQSLDSH-429]

--- a/public/modules/slideshows/css/slideshows-list.scss
+++ b/public/modules/slideshows/css/slideshows-list.scss
@@ -9,7 +9,6 @@
 }
 
 .iqss-slideshowlist-content {
-    height: 100%;
     width: 80%;
 
     padding-top: $slideshow-list-header-content-top-padding;
@@ -32,7 +31,7 @@
     padding: 0;
     width: $slideshow-list-slideshow-width;
     box-shadow: 2px 2px 3px $grey-color;
-    
+
     .ng-slide-view {
         > * {
             cursor: pointer !important;
